[package]
name = "librv4rs-example"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "*"
riscv-rt = "*"
gd32vf103-hal = "*"

[[bin]]
name = "librv4rs-example"
test = false
bench = false
